# rust-text-to-checkstyle-cli

./: .appveyor.yml  .travis.yml  Cargo.toml  changelog.md  package.json  readme.md
ci/: before_deploy.ps1  before_deploy.sh
exe/: build-linux.js  build-windows.js  build.js
src/: checkstyle.rs  main.rs  text2checkstyle.rs
